# LMAPF-SoftRHCR

./: .gitignore  CITATION.cff  README.md  pyproject.toml
SoftRHCR/: __init__.py
SoftRHCR/algorithms/: __init__.py  agentBase.py
SoftRHCR/algorithms/FollowPlanner/: __init__.py  follow_planner.py
SoftRHCR/algorithms/GateBlend/: __init__.py  gate_blend.py  gate_blend_mappo.py
SoftRHCR/algorithms/IPPO/: __init__.py  ippo.py
SoftRHCR/algorithms/MAPPO/: __init__.py  mappo.py
SoftRHCR/algorithms/PPO/: __init__.py  ppo_update.py
SoftRHCR/algorithms/SoftRHCR/: __init__.py  rhcr_utils.py  soft_rhcr.py  soft_rhcr_base.py  soft_rhcr_mappo.py
SoftRHCR/config/: __init__.py  configBase.py  config_loader.py  module_catalog.py  planner_catalog.py  registry.py
SoftRHCR/config/usercfg/: algo.json  algo_gateblend.json  algo_gateblend_mappo.json  algo_ippo.json  algo_mappo.json  algo_soft_rhcr.json  algo_soft_rhcr_mappo.json  env.json  mode_eval.json  mode_runtime.json  mode_train.json
SoftRHCR/modules/: __init__.py  device.py  intrinsic_reward.py  model_io.py  network.py  observation_adapter.py  planner_features.py  replay_buffer.py  train_logger.py
SoftRHCR/scripts/: __init__.py  cli_review.py  evaluation.py  runtime_experiment.py  trainer.py
