[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SoftRHCR"
version = "0.1.0"
description = "Multi-Agent Path Finding (MAPF) reinforcement learning algorithms"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "numpy>=1.24",
    "tqdm>=4.60",
    "tensorboard>=2.10",
    "wandb>=0.15",
    "matplotlib>=3.5",
    "LMAPFEnv",
]

[project.scripts]
softrhcr-train = "SoftRHCR.scripts.trainer:main"
softrhcr-evaluate = "SoftRHCR.scripts.evaluation:main"
softrhcr-experiment = "SoftRHCR.scripts.runtime_experiment:main"

[tool.hatch.build.targets.wheel]
packages = ["SoftRHCR/"]
